# phenoseeker-website

./: README.md  pyproject.toml
backend/: app.py
backend/models/: distance.py
backend/routes/: health.py  main.py
backend/templates/: about.html  index.html  search.html  welcome.html
dev/: create_db.py  get_ids_no_multi_process.py  get_pubchem_chembl_id.py  prepare_database copy.ipynb  prepare_database.ipynb  sandbox.ipynb  test_matrix.npy  test_metadata.csv  update_metadata.ipynb
